--- a/src/ProjectParser/ProjectParser.csproj
+++ b/src/ProjectParser/ProjectParser.csproj
@@ -1,5 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <PackageId>ProjectParser</PackageId>
     <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <Version>0.1.0</Version>
