:wrench: Change target framework to .NET Standard 2.0

--- a/src/ProjectParser/ProjectParser.csproj
+++ b/src/ProjectParser/ProjectParser.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <PackageId>ProjectParser</PackageId>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
-    <Version>0.1.0</Version>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.2.0</Version>
   </PropertyGroup>
 </Project>
