--- a/src/ProjectParser/ProjectParser.csproj
+++ b/src/ProjectParser/ProjectParser.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <PackageId>ProjectParser</PackageId>
+    <PackageId>wk.ProjectParser</PackageId>
     <OutputType>Library</OutputType>
     <TargetFrameworks>netstandard1.6;netstandard2.0;net45</TargetFrameworks>
     <Version>0.4.0</Version>
